--- a/MOVIIES.HTML
+++ b/MOVIIES.HTML
@@ -1,4 +1,5 @@
 <!doctype html>
+<html>
 <head>
     <title>GET MOVIES YOU NEE TO WATCH</title>
 </head>
@@ -17,3 +18,4 @@
     <video src=”C:\Users\Givan\Desktop\HTML INTRO\kenya naipenda by juakali.stvo.mp4” type=”video/mp4”>kenya patriotoc song</video> 
         <a href=”C:\Users\Givan\Desktop\HTML INTRO\kenya naipenda by juakali.stvo.mp4” download>Download video</a> . 
 </body>
+</html>
