--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
     <title style="position:4PX ;"> Working on IT</title>
     </head>
 <body>
-    <nav>
-   <a href "#ABOUT US">ABOUT US</a> 
+    <nav "#" STYLE="FONT-SIZE:LARGE;">
+   CERTIFICATE AND DIPLOMA MODULE 1 COMPUTER LEARNING MATERIALS
 </nav>
-    <h1>Remain consistent in IT</h1>
-    <p1 style="font-5px"> Work on what wht you know bit by bit and perfect in it, Forget about what you dont know you will work on it leter after you have done whtat you know</p1>
+    <h1>OPERATING SYSTEM MODULE 1 </h1>
+    <SH1>COURSE OUTLINE</SH1>
+    <p1 style="font-size:medium;"> 
+        <OL>
+            <LI>CHAPTER 1:INTRODUCTION TO OS</LI>
+            <LI>CHAPTER 2:PROCESS MANAGEMENT</LI>
+            <LI>CHAPTER 3:MEMORY MANAGEMENT</LI>
+            <LI>CHAPTER 4:DEVICE (I/O) MANAGEMENT</LI>
+            <LI>CHAPTER 5:FILE MANAGEMENT</LI>
+        </OL>
+
+          <A HREF="C:\Users\Givan\Desktop\HTML INTRO\Operating System notes.docx">OPERATINGI SYSTEM PDF NOTES</a>
+    </p1>
+    <BR>
     <br>
-    <h2 style="font-size: width: 2px;"> 
+    <h2 style="font-size:medium;"> 
         Types of viruses/Malwares </h2>
         <p2>
       <ol>
@@ -34,10 +46,7 @@
             <li>Blue hat Harcker</li>
         </ol>
         <br>
-        <nav>
-     <a href="C:\Users\Givan\Desktop\HTML INTRO\MOVIIES.HTML">Click here to get movies</a>  
-    </nav>
-    <br>
+            <br>
     <section>
        <b> <h1>ABOUT US</h1></b>
         <P1>We are the best website offering computer notes in kenya you can get what you whant from here just such about it and you will find.
@@ -66,9 +75,12 @@
         <br>
         Email:<nput type="Email" value="15"> 
         <br>
-        comment: <input comment="text" value="500"
+        comment: <input comment="text" 
         <br>
         <center> <input type="submit"> </center>
     </form>
+    <br>
+   <p2> To get web hosting click the link <a href="https://www.webhostkenya.co.ke/web-hosting/">https://clients.webhostkenya.com/aff.php?aff=92
+    </a> </p2>
 </body>
 </html>
