--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <LI>CHAPTER 5:FILE MANAGEMENT</LI>
         </OL>
 
-          <A HREF="C:\Users\Givan\Desktop\HTML INTRO\Operating System notes.docx">OPERATINGI SYSTEM PDF NOTES</a>
+          <a href="C:\Users\Givan\Desktop\HTML INTRO\Operating System notes.docx">OPERATINGI SYSTEM PDF NOTES</a>
     </p1>
     <BR>
     <br>
