--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
     <title style="position:4PX ;"> Working on IT</title>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2297546025872587"
+     crossorigin="anonymous"></script>
     </head>
 <body>
     <nav "#" STYLE="FONT-SIZE:LARGE;">
