--- a/web design.html
+++ b/web design.html
@@ -7,6 +7,8 @@
         HOW TO MAKE A WEBSITE USING HTML
     </title>
     <div>xCopyright &copy;2017</div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2297546025872587"
+     crossorigin="anonymous"></script>
 </head>
 <nav>
 <ul STYLE="COLOR:BLUE;">
