--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html style="background-color:rgb(219, 223, 223)">
-    <head fa2292e938157f8307b12dbab708a8 _github-pages-challenge-tymogiven>
+    <head fa2292e938157f8307b12dbab708a8 _github-pages-challenge-tymogiven google-site-verification=M-mn5STVWI_z-5wTf7NzJmAeIMp1DKr4KwCMT9anpOY>
     <title style="position:4PX ;"> Working on IT</title>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2297546025872587"
      crossorigin="anonymous"></script>
