--- a/MOVIES.HTML
+++ b/MOVIES.HTML
@@ -1,6 +1,11 @@
 <!doctype html>
 <html>
 <head>
+    google-site-verification=M-mn5STVWI_z-5wTf7NzJmAeIMp1DKr4KwCMT9anpOY
+    _github-pages-challenge-tymogiven
+    fa2292e938157f8307b12dbab708a8
+    _github-pages-challenge-tymogiven.jivanji
+    b17be1294f2475bdd410584b0c5054
     <title>GET MOVIES YOU NEED TO WATCH</title>
 </head>
 <body>
