--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title style="position:4PX ;"> Working on IT</title>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2297546025872587"
      crossorigin="anonymous"></script>
+        <meta name="google-site-verification" content="google-site-verification=KSUFdL-qD9qVnnI36zfJw8MSJV0OC1V3jOL4FSKZWFY" />
+        <<meta name="google-site-verification" content="KSUFdL-qD9qVnnI36zfJw8MSJV0OC1V3jOL4FSKZWFY"  />
     </head>
 <body>
     <nav "#" STYLE="FONT-SIZE:LARGE;">
