--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head fa2292e938157f8307b12dbab708a8 _github-pages-challenge-tymogiven google-site-verification=M-mn5STVWI_z-5wTf7NzJmAeIMp1DKr4KwCMT9anpOY>
     <title style="position:4PX ;"> Working on IT</title>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2297546025872587"
-     crossorigin="anonymous"></script>
+     crossorigin="anonymous">
+        </script>
         <meta name="google-site-verification" content="google-site-verification=KSUFdL-qD9qVnnI36zfJw8MSJV0OC1V3jOL4FSKZWFY" />
-        <<meta name="google-site-verification" content="KSUFdL-qD9qVnnI36zfJw8MSJV0OC1V3jOL4FSKZWFY"  />
+        <meta name="google-site-verification" content="KSUFdL-qD9qVnnI36zfJw8MSJV0OC1V3jOL4FSKZWFY"  />
     </head>
 <body>
     <nav "#" STYLE="FONT-SIZE:LARGE;">
