--- a/MOVIES.HTML
+++ b/MOVIES.HTML
@@ -7,6 +7,7 @@
     _github-pages-challenge-tymogiven.jivanji
     b17be1294f2475bdd410584b0c5054
     <title>GET MOVIES YOU NEED TO WATCH</title>
+    <meta name="google-site-verification" content="WcUd_v7OidmzKx87JjklX-aAMztinbnrSLKhrFOdfoI" />
 </head>
 <body>
     <nav>
