--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         </script>
         <meta name="google-site-verification" content="google-site-verification=KSUFdL-qD9qVnnI36zfJw8MSJV0OC1V3jOL4FSKZWFY" />
         <meta name="google-site-verification" content="KSUFdL-qD9qVnnI36zfJw8MSJV0OC1V3jOL4FSKZWFY"  />
+        <meta name="google-site-verification" content="WcUd_v7OidmzKx87JjklX-aAMztinbnrSLKhrFOdfoI" />
     </head>
 <body>
     <nav "#" STYLE="FONT-SIZE:LARGE;">
