--- a/verify.html
+++ b/verify.html
@@ -1,4 +1,5 @@
 <head>
   <meta name="google-site-verification" content="WcUd_v7OidmzKx87JjklX-aAMztinbnrSLKhrFOdfoI" />
 <meta name="google-site-verification" content="WcUd_v7OidmzKx87JjklX-aAMztinbnrSLKhrFOdfoI" />
+  google-site-verification=KSUFdL-qD9qVnnI36zfJw8MSJV0OC1V3jOL4FSKZWFY
 </head>
