--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         </script>
         <meta name="google-site-verification" content="KSUFdL-qD9qVnnI36zfJw8MSJV0OC1V3jOL4FSKZWFY"  />
         <meta name="google-site-verification" content="WcUd_v7OidmzKx87JjklX-aAMztinbnrSLKhrFOdfoI" />
+        <meta name="_github-pages-challenge-tymogiven" content="fa2292e938157f8307b12dbab708a8"/>
     </head>
 <body>
     <nav "#" STYLE="FONT-SIZE:LARGE;">
