--- a/verify.html
+++ b/verify.html
@@ -3,5 +3,5 @@
 <meta name="google-site-verification" content="WcUd_v7OidmzKx87JjklX-aAMztinbnrSLKhrFOdfoI" />
   google-site-verification=KSUFdL-qD9qVnnI36zfJw8MSJV0OC1V3jOL4FSKZWFY
   fa2292e938157f8307b12dbab708a8
-  
+  <meta name="_github-pages-challenge-tymogiven" content="fa2292e938157f8307b12dbab708a8"/>
 </head>
