--- a/verify.html
+++ b/verify.html
@@ -4,4 +4,5 @@
   google-site-verification=KSUFdL-qD9qVnnI36zfJw8MSJV0OC1V3jOL4FSKZWFY
   fa2292e938157f8307b12dbab708a8
   <meta name="_github-pages-challenge-tymogiven" content="fa2292e938157f8307b12dbab708a8"/>
+  <meta name="google-site-verification" content="aDeuY7WR03pJnGD-7FJkiAWOztsAhFsRtY185LESgNk" />
 </head>
