--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <meta name="google-site-verification" content="KSUFdL-qD9qVnnI36zfJw8MSJV0OC1V3jOL4FSKZWFY"  />
         <meta name="google-site-verification" content="WcUd_v7OidmzKx87JjklX-aAMztinbnrSLKhrFOdfoI" />
         <meta name="_github-pages-challenge-tymogiven" content="fa2292e938157f8307b12dbab708a8"/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2609429021134117"
+     crossorigin="anonymous"></script>
     </head>
 <body>
     <nav "#" STYLE="FONT-SIZE:LARGE;">
