--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta name="_github-pages-challenge-tymogiven" content="fa2292e938157f8307b12dbab708a8"/>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2609429021134117"
      crossorigin="anonymous"></script>
+<meta name="google-site-verification" content="aDeuY7WR03pJnGD-7FJkiAWOztsAhFsRtY185LESgNk" />
     </head>
 <body>
     <nav "#" STYLE="FONT-SIZE:LARGE;">
