--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2609429021134117"
      crossorigin="anonymous"></script>
 <meta name="google-site-verification" content="aDeuY7WR03pJnGD-7FJkiAWOztsAhFsRtY185LESgNk" />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VQZZFYS738"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VQZZFYS738');
+</script>
     </head>
 <body>
     <nav "#" STYLE="FONT-SIZE:LARGE;">
