--- a/verify.html
+++ b/verify.html
@@ -1,3 +1,5 @@
+<! Doctype html>
+<html>
 <head>
   <meta name="google-site-verification" content="WcUd_v7OidmzKx87JjklX-aAMztinbnrSLKhrFOdfoI" />
 <meta name="google-site-verification" content="WcUd_v7OidmzKx87JjklX-aAMztinbnrSLKhrFOdfoI" />
@@ -5,4 +7,8 @@
   fa2292e938157f8307b12dbab708a8
   <meta name="_github-pages-challenge-tymogiven" content="fa2292e938157f8307b12dbab708a8"/>
   <meta name="google-site-verification" content="aDeuY7WR03pJnGD-7FJkiAWOztsAhFsRtY185LESgNk" />
+
 </head>
+<body>
+</body>
+
