--- a/verify.html
+++ b/verify.html
@@ -1,4 +1,4 @@
-<! Doctype html>
+<! Doc type html>
 <html>
 <head>
   <meta name="google-site-verification" content="WcUd_v7OidmzKx87JjklX-aAMztinbnrSLKhrFOdfoI" />
@@ -11,4 +11,5 @@
 </head>
 <body>
 </body>
+</html>
 
