--- a/web design.html
+++ b/web design.html
@@ -1,14 +1,14 @@
 <!doc type html>
-<html style="background-color:rgb(141, 136, 146)"
+<html style="background-color:rgb(170, 166, 169)">
 
 <head>
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2297546025872587"
+     crossorigin="anonymous">
+    </script>
     <title>
         HOW TO MAKE A WEBSITE USING HTML
     </title>
-   
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2297546025872587"
-     crossorigin="anonymous"></script>
+    
 </head>
 <nav>
 <ul STYLE="COLOR:BLUE;">
@@ -45,7 +45,9 @@
               <br>
               <title></title>
             </head>
-        </p>
-         <div>xCopyright &copy;2017</div>
+        </p> 
+        To get web hosting click the link <a href="https://www.webhostkenya.co.ke/web-hosting/">https://clients.webhostkenya.com/aff.php?aff=92
+        </a>  
+        <div>xCopyright &copy;2017</div>     
     </BODY>
 </html>
