--- a/MOVIES.HTML
+++ b/MOVIES.HTML
@@ -1,12 +1,12 @@
 <!doctype html>
-<html>
+<html style="background-color:rgb(170, 166, 169)">
 <head>
+    <title>GET MOVIES </title>
     google-site-verification=M-mn5STVWI_z-5wTf7NzJmAeIMp1DKr4KwCMT9anpOY
     _github-pages-challenge-tymogiven
     fa2292e938157f8307b12dbab708a8
     _github-pages-challenge-tymogiven.jivanji
     b17be1294f2475bdd410584b0c5054
-    <title>GET MOVIES YOU NEED TO WATCH</title>
     <meta name="google-site-verification" content="WcUd_v7OidmzKx87JjklX-aAMztinbnrSLKhrFOdfoI" />
 </head>
 <body>
@@ -19,7 +19,7 @@
             <a href="C:\Users\Givan\Desktop\HTML INTRO\index.html" style="color:blue">CONTACTS</a>
         </end>
     </nav>
-    <h1>You will love movies and come back for more movies</h1>
+    <h1>You will love movies </h1>
     <br>
  
         <video id=”V1” >
@@ -34,7 +34,5 @@
     }
     //-->
        </script>
-       
-       
 </body>
 </html>
