--- a/index.html
+++ b/index.html
@@ -27,23 +27,17 @@
     </head>
 <body>
     <nav>
-        <a href="https://givan-wanzala-5.webnode.co.uk/gw/">KNEC PAST PAPERS</a>
+        <UL><LI><a href="https://givan-wanzala-5.webnode.co.uk/gw/">KNEC PAST PAPERS</a></LI></UL>
         </nav>
    
-<ul>
-         <li> <a href="Operating System notes.docx">OPERATING SYSTEM PDF NOTES</a> </li>
-          <div>
-        </div>
-    </ul>
-    </p1>
-    <br>
 
     <br>
         </oL> 
         
         <br>
    
-    <br><section>
+    <br>
+    <section>
         <b> <h1>ABOUT US</h1></b>
          <P1>We are the best website offering computer notes in kenya you can get what you whant from here just such about it and you will find.
              <br>
@@ -54,13 +48,7 @@
          </P1>
      </section>
      <br>
-     <section>
-         <b><h1>CONTACTS</h1></b>
-         <br>
-         Email:<output name="Emai" value="">tymogiven@gmail.com</output>
-     </h1>
-     </section>
-     <p style="color:blue" "backgorund-color:red;">Links</p>
+     
     <div>xCopyright &copy;2017</div> 
         </body>
 </html>
