--- a/index.html
+++ b/index.html
@@ -42,7 +42,34 @@
          </P1>
      </section>
      <br>
-     
+     <h2>Example of thead tag</h2>  
+  <table border="1">  
+  <caption>Population of India</caption>  
+    <thead>  
+             <tr>  
+        <th>Year</th>  
+        <th>Population</th>  
+             </tr>  
+    </thead>  
+       <tbody>  
+        <tr>  
+             <td>2015</td>  
+             <td>1,309,053,980</td>  
+          </tr>  
+        <tr>   
+            <td>2016</td>  
+              <td>1,324,171,354</td>  
+          </tr>  
+           <tr>  
+               <td>2017</td>  
+                <td>1,339,180,127</td>  
+            </tr>  
+             <tr>  
+               <td>2018</td>  
+               <td>1,354,051,854</td>  
+             </tr>  
+     </tbody>  
+  </table>  
     <div>xCopyright &copy;2019</div> 
         </body>
 </html>
