--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
      <br>
      <h2>Example of thead tag</h2>  
   <table border="1">  
-  <caption>Population of India</caption>  
+  <caption>Population of Kenya</caption>  
     <thead>  
              <tr>  
         <th>Year</th>  
