--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
          </P1>
      </section>
      <br>
-     <h2>Example of thead tag</h2>  
+     <h2>POPULATION OF KENYANS</h2>  
   <table border="1">  
   <caption>Population of Kenya</caption>  
     <thead>  
