--- a/verify.html
+++ b/verify.html
@@ -1,6 +1,8 @@
 <! Doc type html>
 <html>
-<head>
+<head><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2297546025872587"
+
+     crossorigin="anonymous"></script>
   <meta name="google-site-verification" content="WcUd_v7OidmzKx87JjklX-aAMztinbnrSLKhrFOdfoI" />
 <meta name="google-site-verification" content="WcUd_v7OidmzKx87JjklX-aAMztinbnrSLKhrFOdfoI" />
   google-site-verification=KSUFdL-qD9qVnnI36zfJw8MSJV0OC1V3jOL4FSKZWFY
