--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
 
 Remember that making money easily often comes with trade-offs, such as lower income or increased risk. Be cautious of get-rich-quick schemes or opportunities that seem too good to be true, as they can lead to financial loss or legal trouble. Building a stable and sustainable source of income typically requires patience, hard work, and dedication.
     </>
-</head>
+<a href="C:\Users\Givan\Desktop\HTML INTRO\how tomake money online.html"> HOW TO MAKE MONEY ONLINE <a/>
 </body>
 </html>
