--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <div>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2297546025872587"
- crossorigin="anonymous">
-    </script>
-    <meta name="google-site-verification" content="KSUFdL-qD9qVnnI36zfJw8MSJV0OC1V3jOL4FSKZWFY"  />
-    <meta name="google-site-verification" content="WcUd_v7OidmzKx87JjklX-aAMztinbnrSLKhrFOdfoI" />
-    <meta name="_github-pages-challenge-tymogiven" content="fa2292e938157f8307b12dbab708a8"/>
 
-<meta name="google-site-verification" content="aDeuY7WR03pJnGD-7FJkiAWOztsAhFsRtY185LESgNk" />
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VQZZFYS738"></script>
-<script>
-  <title> HOW TO MAKE MONEY EASILY</title>
-  <p> Making money easily is a desire many people have, but it's essential to approach this goal with caution. There is no guaranteed way to make money quickly and easily without taking risks or potentially engaging in illegal or unethical activities. It's important to understand that legitimate methods of earning money often require time, effort, and skills. Here are some legal and ethical ways to make money, although they may not always be easy:
+<head> 
+  <title> making money online</title>
+</head>
+
+  <body>
+    Making money easily is a desire many people have, but it's essential to approach this goal with caution. There is no guaranteed way to make money quickly and easily without taking risks or potentially engaging in illegal or unethical activities. It's important to understand that legitimate methods of earning money often require time, effort, and skills. Here are some legal and ethical ways to make money, although they may not always be easy:
 
 1. **Employment:** Getting a job is one of the most common ways to earn money. Look for positions that match your skills, experience, and interests. Keep in mind that advancing in your career often requires ongoing learning and hard work.
 
@@ -31,15 +23,17 @@
 7. **Participating in Market Research:** Some companies pay individuals for participating in market research studies, surveys, or product testing. While this won't make you rich, it can provide some extra income.
 
 8. **Renting Assets:** If you have spare rooms, a car, or other assets, consider renting them out on platforms like Airbnb, Turo (for cars), or other sharing economy platforms.
-
+<br>
 9. **Teaching or Tutoring:** If you have expertise in a particular subject or skill, offer tutoring or online courses. Websites like Udemy and Teachable allow you to create and sell courses.
 
-10. **Passive Income Streams:** Create passive income streams, such as royalties from books, music, or patents, or by earning dividends from investments.
+10. Passive Income Streams: Create passive income streams, such as royalties from books, music, or patents, or by earning dividends from investments.
 
-11. **Side Gigs:** Explore various side gigs or part-time jobs that can complement your income.
+11. Side Gigs:Explore various side gigs or part-time jobs that can complement your income.
 
 Remember that making money easily often comes with trade-offs, such as lower income or increased risk. Be cautious of get-rich-quick schemes or opportunities that seem too good to be true, as they can lead to financial loss or legal trouble. Building a stable and sustainable source of income typically requires patience, hard work, and dedication.
-    </>
-<a href="C:\Users\Givan\Desktop\HTML INTRO\how tomake money online.html"> HOW TO MAKE MONEY ONLINE <a/>
+<br>
+
+<a href="C:\Users\Givan\Desktop\HTML INTRO\how tomake money online.html"> HOW TO MAKE MONEY ONLINE </a>
 </body>
+
 </html>
